tests/suite/snapshots/suite__check__tests__check__bad-pa3-7.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-pa3-7.xi:4:9]
   │
 4 │     foo({25 + 47})
   ·         ────┬────  
   ·             ╰────── Expected bool[] but found int[]
───╯

